unpackaged/main/default/objects/Case/fields/a_Dossier_intervention__c.field-meta.xml
<CustomField>
    <fullName>a_Dossier_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_intervention__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>