unpackaged/main/default/objects/Case/fields/a_Dossier_prise_en_charge__c.field-meta.xml
<CustomField>
    <fullName>a_Dossier_prise_en_charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de prise en charge</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>