unpackaged/main/default/objects/Case/fields/EVAL_Inter_RAI_requise__c.field-meta.xml
<CustomField>
    <fullName>EVAL_Inter_RAI_requise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EVAL Inter-RAI requise</label>
    <type>Checkbox</type>
</CustomField>