unpackaged/main/default/objects/Case/fields/Ordonnance_m_dicale_d_j_existante__c.field-meta.xml
<CustomField>
    <fullName>Ordonnance_m_dicale_d_j_existante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordonnance médicale déjà existante</label>
    <type>Checkbox</type>
</CustomField>