unpackaged/main/default/objects/Case/fields/Ordonnance_m_dicale_obtenue_apr_s__c.field-meta.xml
<CustomField>
    <fullName>Ordonnance_m_dicale_obtenue_apr_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordonnance médicale obtenue après</label>
    <type>Checkbox</type>
</CustomField>