unpackaged/main/default/objects/Case/fields/Plan_intervention__c.field-meta.xml
<CustomField>
    <fullName>Plan_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan intervention</label>
    <referenceTo>Plan_intervention__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>