unpackaged/main/default/objects/Case/fields/Prestation__c.field-meta.xml
<CustomField>
    <fullName>Prestation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestation</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Nouvelles Prestations</relationshipLabel>
    <relationshipName>CasesNouvellePrestation</relationshipName>
    <type>Lookup</type>
</CustomField>