unpackaged/main/default/objects/Case/recordTypes/Nouvelle_demande.recordType-meta.xml
<RecordType>
    <fullName>Nouvelle_demande</fullName>
    <active>true</active>
    <businessProcess>Nouvelle demande</businessProcess>
    <label>Nouvelle demande</label>
</RecordType>