unpackaged/main/default/objects/Case/recordTypes/Nouvelle_prestation_LAMal.recordType-meta.xml
<RecordType>
    <fullName>Nouvelle_prestation_LAMal</fullName>
    <active>true</active>
    <businessProcess>Nouvelle prestation LAMal</businessProcess>
    <label>Nouvelle prestation LAMal</label>
</RecordType>