unpackaged/main/default/objects/Case/recordTypes/Nouvelle_prestation_privee.recordType-meta.xml
<RecordType>
    <fullName>Nouvelle_prestation_privee</fullName>
    <active>true</active>
    <businessProcess>Nouvelle prestation privée</businessProcess>
    <label>Nouvelle prestation privée</label>
</RecordType>