unpackaged/main/default/objects/Case/recordTypes/Nouvelle_prestation_sociale.recordType-meta.xml
<RecordType>
    <fullName>Nouvelle_prestation_sociale</fullName>
    <active>true</active>
    <businessProcess>Nouvelle prestation sociale</businessProcess>
    <label>Nouvelle prestation sociale</label>
</RecordType>