unpackaged/main/default/objects/Case/recordTypes/Prise_charge.recordType-meta.xml
<RecordType>
    <fullName>Prise_charge</fullName>
    <active>true</active>
    <businessProcess>Prise en charge</businessProcess>
    <label>Prise en charge</label>
</RecordType>