unpackaged/main/default/objects/Case/listViews/Prestations_en_cours_d_ouverture.listView-meta.xml
<ListView>
    <fullName>Prestations_en_cours_d_ouverture</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Nouvelle_prestation_LAMal,Case.Nouvelle_prestation_privee,Case.Nouvelle_prestation_sociale</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Prestations en cours  d&apos;ouverture</label>
</ListView>